--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <DOCTYPE! html>
 <html>
   <head>
+    <link href="css/styles.css" rel="stylesheet" type="text/css"
     <title>Boring</title>
   </head>
 
   <body>
     <h1>Golf is boring</h1>
-    <img src="image/golf.jpg" class="intro" alt="golfers standing">
+    <div class="intro">
+      <img src="image/golf.jpg" alt="golfers standing">
 
-    <h2 class="intro">I don't understand the joy of standing around most of the day</h2>
+      <h2>I don't understand the joy of standing around most of the day</h2>
 
-    <p class="intro">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+    </div>
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
 
 
